--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "jade": "0.31.x",
     "mongoose": "^4.13.18",
     "pg": "^4.3.0",
+    "request": "^2.88.2",
     "socket.io": "^2.3.0"
   },
   "engines": {
